--- a/resources/pages/termlog/list.html
+++ b/resources/pages/termlog/list.html
@@ -2,7 +2,7 @@
 <section class="content-header">
     <h1>
         终端日志列表
-        <small>Term Log list</small>
+        <small>Term Log List</small>
     </h1>
 </section>
 
