--- a/resources/pages/terminal/list.html
+++ b/resources/pages/terminal/list.html
@@ -12,15 +12,15 @@
 <!-- Main content -->
 <section class="content">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3" style="">
       <!-- <div class="box box-solid sidebar"> -->
-      <div class="box box-primary tree-box">
+      <div class="box box-primary tree-box" style="">
         <div class="box-header with-border">
           <h3 class="box-title">终端分类</h3>
           <div class="tools">
-            <a id="tct_edit"><i class="fa fa-edit"></i></a>
-            <a id="tct_delete"><i class="fa fa-trash-o"></i></a>
-            <a id="tct_add"><i class="fa fa-plus"></i></a>
+            <a id="tct_edit" class="btn btn-default btn-xs" title="编辑"><i class="glyphicon glyphicon-edit" style="font-size:12px;"></i></a>
+            <a id="tct_delete" class="btn btn-default btn-xs" title="删除"><i class="glyphicon glyphicon-trash" style="font-size:12px;"></i></a>
+            <a id="tct_add" class="btn btn-default btn-xs" title="添加"><i class="glyphicon glyphicon-plus" style="font-size:12px;"></i></a>
           </div>
         </div>
         <ul id="termclass-tree" class="tree-menu">
@@ -29,7 +29,7 @@
       </div>
     </div>
     <!-- /.col -->
-    <div class="col-md-9">
+    <div class="col-md-9" style="min-width: 629px; padding-left: 0">
       <div class="box box-primary">
         <div class="box-header with-border">
           <h3 class="box-title">
@@ -66,7 +66,7 @@
               <button type="button" class="btn btn-default btn-sm" value="offline">离线（<span id="term_offline"></span>）</button>
             </div>
           </div>
-          <div class="table-responsive mailbox-messages">
+          <div class="mailbox-messages">
             <table class="table table-hover table-striped">
               <tbody id="term_list">
               </tbody>
