--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -53,13 +53,20 @@
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">音量</label>
-              <div class="col-sm-10">
+              <div class="col-sm-8">
                 <input id="CO-vol-slider" type="text" value="" class="slider form-control" data-slider-id="green">
+              </div>
+              <div class="col-sm-2">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">工作区间</label>
-              <div class="col-sm-10" id="CO-workWeekRepeat">
+              <div class="col-sm-10">
+                  <input id="CO-workSwitch" type="checkbox" checked>
+              </div>
+            </div>
+            <div class="form-group" id="CO-workWeekRepeatArea">
+              <div class="col-sm-offset-2 col-sm-10" id="CO-workWeekRepeat">
                 <div  class="checkbox">
                     <label style="padding-left: 0; ">
                         <input type="checkbox">
@@ -92,7 +99,7 @@
                 </div>  
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" id="CO-workArea">
               <div class="col-sm-offset-2 col-sm-10">
                 <div class="input-group" style="width: 150px; float: left;">
                     <div class="input-group-addon">
@@ -114,12 +121,17 @@
             <div class="form-group">
               <label class="col-sm-2 control-label">下载区间</label>
               <div class="col-sm-10">
+                  <input id="CO-downloadSwitch" type="checkbox" checked>
+              </div>
+            </div>
+            <div class="form-group" id="CO-downloadArea">
+                <div class="col-sm-offset-2 col-sm-10">
                 <div class="input-group" style="width: 150px; float: left;">
                     <div class="input-group-addon">
                         <i class="fa fa-clock-o"></i>
                     </div>
                     <input type="text" class="form-control" id="CO-downloadStart" style="display: inline-block; width: 120px;">
-                </div>  
+                </div>
                 <div style="float: left; width:30px; text-align: center; height: 34; line-height: 34px;">
                     －
                 </div>
@@ -137,6 +149,11 @@
             <div class="form-group">
               <label class="col-sm-2 control-label">定时重启</label>
               <div class="col-sm-10">
+                  <input id="CO-restartSwitch" type="checkbox" checked>
+              </div>
+            </div>
+            <div class="form-group" id="CO-restartArea">
+                <div class="col-sm-offset-2 col-sm-10">
                 <div class="input-group" style="width: 150px; float: left;">
                     <div class="input-group-addon">
                         <i class="fa fa-clock-o"></i>
