--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -17,6 +17,14 @@
               </div>
             </div>
             <div class="form-group">
+              <label class="col-sm-2 control-label">磁盘信息</label>
+              <div class="col-sm-10">
+                <div class="checkbox">
+                    <label id="CO-DiskInfo" style="padding-left: 0; cursor: default;"></label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
               <label class="col-sm-2 control-label">IP</label>
               <div class="col-sm-10">
                 <div class="checkbox">
