--- a/resources/pages/terminal/configTermClass.html
+++ b/resources/pages/terminal/configTermClass.html
@@ -1,9 +1,9 @@
 <div class="modal-content" style="margin: auto; width: 600px; max-height: 560px;">
     <div class="modal-header">
-        <button id="CO-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button id="CC-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
         </button>
-        <h4 id="CO-title" class="modal-title"></h4>
+        <h4 id="CC-title" class="modal-title"></h4>
     </div>
     <div class="modal-body" style="height:400px; overflow:auto;">
         <div class="form-group">   
@@ -11,32 +11,18 @@
         </div>
         <form class="form-horizontal">
             <div class="form-group">
-              <label class="col-sm-2 control-label">终端名称</label>
-              <div class="col-sm-10">
-                <input id="CO-term-name" type="text" class="form-control" placeholder="终端名称">
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">磁盘信息</label>
+              <label class="col-sm-2 control-label">当前频道</label>
               <div class="col-sm-10">
                 <div class="checkbox">
-                    <label id="CO-DiskInfo" style="padding-left: 0; cursor: default;"></label>
+                    <label id="CC-Channel" style="padding-left: 0; cursor: default;"></label>
                 </div>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">IP</label>
+              <label class="col-sm-2 control-label">预下发频道</label>
               <div class="col-sm-10">
                 <div class="checkbox">
-                    <label id="CO-IP" style="padding-left: 0; cursor: default;"></label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">MAC</label>
-              <div class="col-sm-10">
-                <div class="checkbox">
-                    <label id="CO-MAC" style="padding-left: 0; cursor: default;"></label>
+                    <label id="CC-PreChannel" style="padding-left: 0; cursor: default;"></label>
                 </div>
               </div>
             </div>
@@ -50,19 +36,19 @@
             <div class="form-group">
               <label class="col-sm-2 control-label">升级服务器</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="CO-upgradeURL" placeholder="升级服务器地址">
+                <input type="text" class="form-control" id="CC-upgradeURL" placeholder="升级服务器地址">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">日志服务器</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="CO-logURL" placeholder="日志服务器地址">
+                <input type="text" class="form-control" id="CC-logURL" placeholder="日志服务器地址">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">音量</label>
               <div class="col-sm-8">
-                <input id="CO-vol-slider" type="text" value="" class="slider form-control" data-slider-id="green">
+                <input id="CC-vol-slider" type="text" value="" class="slider form-control" data-slider-id="green">
               </div>
               <div class="col-sm-2">
               </div>
@@ -70,11 +56,11 @@
             <div class="form-group">
               <label class="col-sm-2 control-label">工作区间</label>
               <div class="col-sm-10">
-                  <input id="CO-workSwitch" type="checkbox" checked>
+                  <input id="CC-workSwitch" type="checkbox" checked>
               </div>
             </div>
-            <div class="form-group" id="CO-workWeekRepeatArea">
-              <div class="col-sm-offset-2 col-sm-10" id="CO-workWeekRepeat">
+            <div class="form-group" id="CC-workWeekRepeatArea">
+              <div class="col-sm-offset-2 col-sm-10" id="CC-workWeekRepeat">
                 <div  class="checkbox">
                     <label style="padding-left: 0; ">
                         <input type="checkbox">
@@ -107,13 +93,13 @@
                 </div>  
               </div>
             </div>
-            <div class="form-group" id="CO-workArea">
+            <div class="form-group" id="CC-workArea">
               <div class="col-sm-offset-2 col-sm-10">
                 <div class="input-group" style="width: 150px; float: left;">
                     <div class="input-group-addon">
                         <i class="fa fa-clock-o"></i>
                     </div>
-                    <input type="text" class="form-control" id="CO-workStart" style="display: inline-block; width: 120px;">
+                    <input type="text" class="form-control" id="CC-workStart" style="display: inline-block; width: 120px;">
                 </div>  
                 <div style="float: left; width:30px; text-align: center; height: 34; line-height: 34px;">
                     －
@@ -122,23 +108,23 @@
                     <div class="input-group-addon">
                         <i class="fa fa-clock-o"></i>
                     </div>
-                    <input type="text" class="form-control" id="CO-workEnd" style="display: inline-block; width: 120px;">
+                    <input type="text" class="form-control" id="CC-workEnd" style="display: inline-block; width: 120px;">
                 </div>   
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">下载区间</label>
               <div class="col-sm-10">
-                  <input id="CO-downloadSwitch" type="checkbox" checked>
+                  <input id="CC-downloadSwitch" type="checkbox" checked>
               </div>
             </div>
-            <div class="form-group" id="CO-downloadArea">
+            <div class="form-group" id="CC-downloadArea">
                 <div class="col-sm-offset-2 col-sm-10">
                 <div class="input-group" style="width: 150px; float: left;">
                     <div class="input-group-addon">
                         <i class="fa fa-clock-o"></i>
                     </div>
-                    <input type="text" class="form-control" id="CO-downloadStart" style="display: inline-block; width: 120px;">
+                    <input type="text" class="form-control" id="CC-downloadStart" style="display: inline-block; width: 120px;">
                 </div>
                 <div style="float: left; width:30px; text-align: center; height: 34; line-height: 34px;">
                     －
@@ -147,7 +133,7 @@
                     <div class="input-group-addon">
                         <i class="fa fa-clock-o"></i>
                     </div>
-                    <input type="text" class="form-control" id="CO-downloadEnd" style="display: inline-block; width: 120px;">
+                    <input type="text" class="form-control" id="CC-downloadEnd" style="display: inline-block; width: 120px;">
                 </div> 
                 <div style="float: left; width:70px; text-align: center; height: 34; line-height: 34px;">
                     （每天）
@@ -157,16 +143,16 @@
             <div class="form-group">
               <label class="col-sm-2 control-label">定时重启</label>
               <div class="col-sm-10">
-                  <input id="CO-restartSwitch" type="checkbox" checked>
+                  <input id="CC-restartSwitch" type="checkbox" checked>
               </div>
             </div>
-            <div class="form-group" id="CO-restartArea">
+            <div class="form-group" id="CC-restartArea">
                 <div class="col-sm-offset-2 col-sm-10">
                 <div class="input-group" style="width: 150px; float: left;">
                     <div class="input-group-addon">
                         <i class="fa fa-clock-o"></i>
                     </div>
-                    <input type="text" class="form-control" id="CO-restartTime" style="display: inline-block; width: 120px;">
+                    <input type="text" class="form-control" id="CC-restartTime" style="display: inline-block; width: 120px;">
                 </div>
                 <div style="float: left; width:70px; text-align: center; height: 34; line-height: 34px;">
                     （每天）
@@ -176,11 +162,11 @@
         </form>    
     </div>
     <div class="modal-footer">
-        <button id="CO-save" type="button" class="btn btn-primary pull-right">保存</button>
+        <button id="CC-save" type="button" class="btn btn-primary pull-right">保存</button>
     </div>
 </div>
 <script>
-    seajs.use("pages/terminal/configOneTerm.js", function (configOne) {
-        configOne.init();
+    seajs.use("pages/terminal/configTermClass.js", function (configClass) {
+        configClass.init();
     })
 </script>
