解决分配用户翻页缓存问题

--- a/resources/pages/user/roles_edit.html
+++ b/resources/pages/user/roles_edit.html
@@ -10,10 +10,10 @@
             <input type="text" class="form-control" id="role_name" placeholder="请输入角色名称" style="width:80%;">
             <button id="name_change" type="button" class="btn btn-primary" style=" position:absolute;right:15px;top:40px;">修改名称</button>
             <label style="margin-top:10px;">终端分类树根节点：</label>
-             <button id="term_list" type="button" class="btn btn-primary pull-right" style="margin:10px 0;">终端编辑</button>
+             
             <div class="form-group">
-           
             <textarea id="term" style="width:80%; height:150px; resize:none;"></textarea>
+            <button id="term_list" type="button" class="btn btn-primary pull-right" style="margin-top:160px;">终端分类选择</button>
             </div>
             <label>功能：</label>
             <div class="form-group">
