--- a/resources/pages/channel/list.html
+++ b/resources/pages/channel/list.html
@@ -1,15 +1,31 @@
-<section id="channel-list-nav" class="content-header row">
-	<h1>频道列表</h1>
+<section id="channel-list-nav" class="content-header">
+	<h1>频道</h1>
+
+
 	<div class="input-group input-group-sm col-sm-2 search-container">
 		<input type="text" class="form-control">
 		<span class="input-group-btn">
 			<button type="button" class="btn btn-info btn-flat">搜索</button>
 		</span>
 	</div>
+
+	
 </section>
 <section class="content">
-	<div class="box">
+	<div class="box box-primary">
 		<!-- /.box-header -->
+		<div class="box-header with-border">
+			<h3 id="mtrLisTitle" class="box-title">频道列表</h3>
+
+			<div class="box-tools pull-right">
+                <div class="has-feedback">
+                    <input id="mtrSearch" type="text" class="form-control input-sm" placeholder="搜索视频" typeid="1">
+                    <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                </div>
+            </div>
+
+		</div>
+		<!-- /.box-controls -->
 		<div id="channel-list-controls">
 			<!-- Check all button -->
 			<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i>
