--- a/resources/pages/channel/list.html
+++ b/resources/pages/channel/list.html
@@ -1,17 +1,9 @@
-<section id="channel-list-nav" class="content-header">
+<section id="" class="content-header">
 	<h1>频道</h1>
-
-
-	<div class="input-group input-group-sm col-sm-2 search-container">
-		<input type="text" class="form-control">
-		<span class="input-group-btn">
-			<button type="button" class="btn btn-info btn-flat">搜索</button>
-		</span>
-	</div>
 
 	
 </section>
-<section class="content">
+<section class="content" id="channel-list-nav">
 	<div class="box box-primary">
 		<!-- /.box-header -->
 		<div class="box-header with-border">
@@ -19,22 +11,22 @@
 
 			<div class="box-tools pull-right">
                 <div class="has-feedback">
-                    <input id="mtrSearch" type="text" class="form-control input-sm" placeholder="搜索视频" typeid="1">
-                    <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                    <input id="mtrSearch" type="text" class="form-control input-sm" placeholder="搜索频道" typeid="1">
+                    <span class="glyphicon glyphicon-search form-control-feedback" style=" pointer-events: auto; cursor: pointer;"></span>
                 </div>
             </div>
 
 		</div>
 		<!-- /.box-controls -->
-		<div id="channel-list-controls">
+		<div id="channel-list-controls" class="mailbox-controls">
 			<!-- Check all button -->
 			<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i>
 			</button>
-			<div class="pull-right btn-group">
-				<button type="button" class="btn btn-default btn-flat btn-publish">发布</button>
-				<button type="button" class="btn btn-default btn-flat btn-publish-later">预发布</button>
-				<button type="button" class="btn btn-default btn-flat btn-copy">复制</button>
-				<button type="button" class="btn btn-default btn-flat btn-delete">删除</button>
+			<div class="btn-group">
+				<button type="button" class="btn btn-default btn-sm btn-publish">发布</button>
+				<button type="button" class="btn btn-default btn-sm btn-publish-later">预发布</button>
+				<button type="button" class="btn btn-default btn-sm btn-copy">复制</button>
+				<button type="button" class="btn btn-default btn-sm btn-delete">删除</button>
 			</div>
 		</div>
 		<div class="table-responsive">
