--- a/resources/pages/terminal/list.html
+++ b/resources/pages/terminal/list.html
@@ -34,8 +34,8 @@
         <div class="box-header with-border">
           <h3 class="box-title" style="position: relative; top: 3px;">
             <span id="termlist-title"></span>
-            <small id="term_status" style="padding-left: 20px;"></small>
-            <small><button id="tct_config" type="button" class="btn btn-default btn-xs" style="position: relative; top: -4px;"><i class="fa fa-gear"></i> 配置</button></small>
+            <small id="term_status" style="padding-left: 15px;"></small>
+            <small><button id="tct_config" type="button" class="btn btn-default btn-xs" style="position: relative; top: -4px;" title="批量配置该分类终端"><i class="fa fa-gear"></i></button></small>
           </h3>
 
           <div class="box-tools">
