--- a/resources/pages/terminal/configTermClass.html
+++ b/resources/pages/terminal/configTermClass.html
@@ -5,6 +5,10 @@
         </button>
         <h4 id="CC-title" class="modal-title"></h4>
     </div>
+    <small class="warn-i" style="">
+      <i class="fa fa-info-circle"></i>
+      &nbsp;将频道绑定到您的终端上，它们将按照计划播出内容
+    </small>
     <div class="modal-body" style="height:400px; overflow:auto;">
         <div class="form-group">   
             <label style="color: #72afd2;">基本信息</label>
