--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -25,6 +25,22 @@
               </div>
             </div>
             <div class="form-group">
+              <label class="col-sm-2 control-label">CPU</label>
+              <div class="col-sm-10">
+                <div class="checkbox">
+                    <label id="CO-CPU" style="padding-left: 0; cursor: default;"></label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">内存</label>
+              <div class="col-sm-10">
+                <div class="checkbox">
+                    <label id="CO-Mem" style="padding-left: 0; cursor: default;"></label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
               <label class="col-sm-2 control-label">IP</label>
               <div class="col-sm-10">
                 <div class="checkbox">
