用户界面样式调优完成

--- a/resources/pages/channel/list.html
+++ b/resources/pages/channel/list.html
@@ -1,6 +1,6 @@
 <section id="" class="content-header">
 	<h1>频道</h1>
-	<small class="tips" style="position: absolute; top:20px; right: 16px;"><i class="fa fa-info-circle"></i>&nbsp将频道绑定到您的终端上，它们将按照计划播出内容</small>
+	<small class="tips" style="position: absolute; top:20px; right: 16px;"><i class="fa fa-info-circle"></i>&nbsp把频道绑定到您的终端上，它们将按照计划播出内容</small>
 	
 </section>
 <section class="content" id="channel-list-nav">
