--- a/resources/pages/user/users_list.html
+++ b/resources/pages/user/users_list.html
@@ -1,8 +1,8 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        用户列表
-        <small>Users list</small>
+        用户管理
+        <!-- <small>Users list</small> -->
     </h1>
 </section>
 
@@ -12,16 +12,19 @@
         <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 id="usersLisTitle" class="box-title"></h3>                    
+                    <div class="btn-group">
+                   		<button id="user_add" type="button" class="btn btn-default btn-sm">
+                            <i class="fa fa-user-plus"></i>
+                            创建新用户
+                        </button>
+                    </div>
                     <!-- /.box-tools -->
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body no-padding">
                     <div class="mailbox-controls">
                         
-                        <div class="btn-group">
-                       		<button id="user_add" type="button" class="btn btn-default btn-sm">添加</button>
-                        </div>
+                        <h6 id="usersLisTitle" class="box-title" style="padding-left: 15px;"></h6>                    
                         <!-- /.btn-group -->
 
                         <div class="pull-right">
