--- a/resources/pages/user/user_add.html
+++ b/resources/pages/user/user_add.html
@@ -4,7 +4,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
         <h4 class="modal-title">
-          <i class="fa fa-user-plus" sty></i>
+          <i class="fa fa-user-plus"></i>
           创建用户
         </h4>
     </div>
