--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -83,6 +83,28 @@
               <div class="col-sm-2">
               </div>
             </div>
+            <div class="col-md-6">
+            <div class="form-group">
+                <label>Multiple</label>
+                <select class="form-control select2" multiple="multiple" data-placeholder="Select a State" style="width: 100%;">
+                  <option>Alabama</option>
+                  <option>Alaska</option>
+                  <option>California</option>
+                  <option>Delaware</option>
+                  <option>Tennessee</option>
+                  <option>Texas</option>
+                  <option>Washington</option>
+                </select>
+              </div>
+            </div>
+
+
+
+
+
+
+
+
             <div class="form-group">
               <label class="col-sm-2 control-label">工作区间</label>
               <div class="col-sm-10">
