将角色和用户的新建统一到编辑界面

--- a/resources/pages/user/roles_edit.html
+++ b/resources/pages/user/roles_edit.html
@@ -8,11 +8,11 @@
         <div class="form-group" style="overflow:auto;">
             <label>角色名称：</label>
             <input type="text" class="form-control" id="role_name" placeholder="请输入角色名称" style="width:80%;">
-            <button id="name_change" type="button" class="btn btn-primary" style=" position:absolute;right:15px;top:40px;">修改名称</button>
+            
             <label style="margin-top:10px;">终端分类树根节点：</label>
              
             <div class="form-group">
-            <textarea id="term" style="width:80%; height:150px; resize:none;"></textarea>
+            <textarea id="term" disabled="disabled" style="width:80%; height:150px; resize:none;"></textarea>
             <button id="term_list" type="button" class="btn btn-primary pull-right" style="margin-top:160px;">终端分类选择</button>
             </div>
             <label>功能：</label>
