去掉终端自动刷新

--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -83,17 +83,10 @@
               <div class="col-sm-2">
               </div>
             </div>
-            <div class="col-md-6">
             <div class="form-group">
-                <label>Multiple</label>
-                <select class="form-control select2" multiple="multiple" data-placeholder="Select a State" style="width: 100%;">
-                  <option>Alabama</option>
-                  <option>Alaska</option>
-                  <option>California</option>
-                  <option>Delaware</option>
-                  <option>Tennessee</option>
-                  <option>Texas</option>
-                  <option>Washington</option>
+              <label class="col-sm-2 control-label">城市</label>
+              <div class="col-sm-10">
+                <select id="CO-city" class="form-control select2" multiple="multiple" data-placeholder="请选择城市（终端将会显示所选城市的天气信息）" style="width: 100%;">
                 </select>
               </div>
             </div>
