--- a/resources/pages/user/roles_list.html
+++ b/resources/pages/user/roles_list.html
@@ -1,8 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        角色列表
-        <small>Roles list</small>
+        角色权限
     </h1>
 </section>
 
@@ -12,22 +11,22 @@
         <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 id="rolesLisTitle" class="box-title"></h3>                    
+                    <button id="roles_add" type="button" class="btn btn-default btn-sm">创建新角色</button>
                     <!-- /.box-tools -->
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body no-padding">
-                    <div class="mailbox-controls">
+                <!-- <div class="box-body no-padding"> -->
+                    <!-- <div class="mailbox-controls"> -->
+                       <!-- <h6 id="rolesLisTitle" class="box-title"></h6>                     -->
                         
-                        <div class="btn-group">
-                       		<button id="roles_add" type="button" class="btn btn-default btn-sm">添加</button>
-                        </div>
+                        <!-- <div class="btn-group"> -->
+                        <!-- </div> -->
                         <!-- /.btn-group -->
 
-                        <div class="pull-right">
-                        </div>
+                        <!-- <div class="pull-right"> -->
+                        <!-- </div> -->
                         <!-- /.pull-right -->
-                    </div>
+                    <!-- </div> -->
                     <div class="table-responsive mailbox-messages">
                         <!-- 资源列表 -->
                         <table id="rolesTable" class="table table-hover table-striped">
@@ -38,13 +37,14 @@
                         <!-- /.table -->
                     </div>
                     <!-- /.mail-box-messages -->
+                    
+                    <div class="box-footer no-padding text-center">
+                        <!-- 翻页 -->
+                        <ul id="roles-table-pager" class="pagination">
+                        </ul>
+                    </div>
                 </div>
                 <!-- /.box-body -->
-                <div class="box-footer no-padding text-center">
-                    <!-- 翻页 -->
-                    <ul id="roles-table-pager" class="pagination">
-                    </ul>
-                </div>
             </div>
             <!-- /. box -->
         </div>
