--- a/resources/pages/terminal/configTermClass.html
+++ b/resources/pages/terminal/configTermClass.html
@@ -59,6 +59,13 @@
               </div>
             </div>
             <div class="form-group">
+              <label class="col-sm-2 control-label">城市</label>
+              <div class="col-sm-10">
+                <select id="CC-city" class="form-control select2" multiple="multiple" data-placeholder="请选择城市（终端将会显示所选城市的天气信息）" style="width: 100%;">
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
               <label class="col-sm-2 control-label">工作区间</label>
               <div class="col-sm-10">
                   <input id="CC-workSwitch" type="checkbox" checked>
