--- a/resources/pages/user/user_add.html
+++ b/resources/pages/user/user_add.html
@@ -18,11 +18,11 @@
               <div class="box-body">
                 <div class="form-group">
                   <label>用户名</label>
-                  <input type="text" class="form-control" id="user_name" placeholder="请输入英文用户名" onkeyup="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')" onpaste="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')">
+                  <input type="text" class="form-control" id="user_name" autocomplete="off" placeholder="请输入英文用户名" onkeyup="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')" onpaste="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')">
                 </div>
                 <div class="form-group">
                   <label>密码</label>
-                  <input type="password" class="form-control" id="password" placeholder="请输入密码">
+                  <input type="password" class="form-control" id="password" autocomplete="off" onfocus="this.type='password'" placeholder="请输入密码">
                 </div>
                 <div class="form-group">
                   <label>备注</label>
