--- a/resources/pages/user/roles_edit.html
+++ b/resources/pages/user/roles_edit.html
@@ -1,10 +1,10 @@
-<div id="roleEdit_box" class="modal-content" style="margin: auto; width: 600px; max-height: 560px; overflow:auto">
+<div id="roleEdit_box" class="modal-content" style="margin: auto; width: 600px; max-height: 560px;">
     <div class="modal-header">
         <button type="button" class="close CA_close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">编辑角色</h4>
     </div>
-    <div class="modal-body">
+    <div class="modal-body" style="overflow:auto; max-height: 430px;">
         <div class="form-group" style="overflow:auto;">
             <label>角色名称：</label>
             <input type="text" class="form-control" id="role_name" placeholder="请输入角色名称" style="width:80%;">
