添加facvicon，添加改密码按钮

--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -1,5 +1,5 @@
 <!-- general form elements -->
-<div class="box box-primary" style="height: 90%;">
+<div class="" style="height: 100%;">
     <div class="box-header with-border">
         <h3 id="mtrCtrl_Title" class="box-title">视频控件</h3>
         <div id="widget_attribute" class="pull-right"></div>
