--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -16,8 +16,11 @@
     </div>
     <!-- /.box-body -->
     <div class="box-footer">
+        <div class="pull-left">
+            <button id="Tmtr_viewlast" type="button" class="btn btn-primary">查看审核通过版本的内容</button>
+        </div>
         <div class="pull-right">
-            <button id="Tmtr_submit" type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-floppy-save"></i> 提交</button>
+            <button id="Tmtr_submit" type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-floppy-save"></i> 保存</button>
             <button id="Tmtr_back" type="button" class="btn btn-default"><i class="glyphicon glyphicon-share-alt"></i> 退出</button>
         </div>
     </div>
@@ -25,7 +28,7 @@
 </div>
 
 <script>
-    seajs.use("pages/materials/materials_addText.js", function (materials_addText) {
-        materials_addText.init()
+    seajs.use("pages/materials/materials_viewText.js", function (materials_viewText) {
+        materials_viewText.init()
     })
 </script>
