--- a/resources/pages/user/user_edit.html
+++ b/resources/pages/user/user_edit.html
@@ -20,7 +20,7 @@
                   <label>用户名</label>
                   <input type="text" class="form-control" id="user_name1" autocomplete="off" placeholder="请输入英文用户名" onkeyup="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')" onpaste="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')">
                 </div>
-                <div class="form-group">
+                <div class="form-group"  style="display:none;">
                   <label>密码</label>
                   <input class="form-control" id="password1" autocomplete="off" onfocus="this.type='password'" placeholder="请输入密码">
                 </div>
