修复bug 文本不能编辑

--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -28,7 +28,7 @@
 </div>
 
 <script>
-    seajs.use("pages/materials/materials_viewText.js", function (materials_viewText) {
-        materials_viewText.init()
+    seajs.use("pages/materials/materials_addText.js", function (materials_addText) {
+        materials_addText.init()
     })
 </script>
