--- a/resources/pages/materials/materials_vewText.html
+++ b/resources/pages/materials/materials_vewText.html
@@ -22,7 +22,7 @@
 
 
 <script>
-    seajs.use("pages/materials/materials_addLive.js", function (materials_addLive) {
-        materials_addLive.init()
+    seajs.use("pages/materials/materials_viewText.js", function (materials_viewText) {
+        materials_viewText.init()
     })
 </script>
