--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -17,11 +17,12 @@
     <!-- /.box-body -->
     <div class="box-footer">
         <div class="pull-left">
-            <button id="Tmtr_viewlast" type="button" class="btn btn-primary">查看审核通过版本的内容</button>
+            <button id="Tmtr_viewlast" type="button" class="btn btn-default">查看审核通过版本的内容</button>
         </div>
         <div class="pull-right">
-            <button id="Tmtr_submit" type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-floppy-save"></i> 保存</button>
-            <button id="Tmtr_back" type="button" class="btn btn-default"><i class="glyphicon glyphicon-share-alt"></i> 退出</button>
+            <button id="Tmtr_submit" type="submit" class="btn btn-primary"> 保存并提交</button>
+            <button id="Tmtr_save" type="submit" class="btn btn-primary">仅保存</button>
+            <button id="Tmtr_back" type="button" class="btn btn-default">退出</button>
         </div>
     </div>
     <!-- /.box-footer -->
