--- a/resources/pages/channel/list.html
+++ b/resources/pages/channel/list.html
@@ -27,8 +27,8 @@
 				<button type="button" class="btn btn-default btn-sm btn-publish-later">预发布</button>
 				<button type="button" class="btn btn-default btn-sm btn-copy">复制</button>
 				<button type="button" class="btn btn-default btn-sm btn-delete">删除</button>
-				<a href="#channel/edit" class="btn btn-default btn-sm btn-add-channel">添加频道</a>
 			</div>
+			<a href="#channel/edit" class="btn btn-primary btn-sm btn-add-channel">添加频道</a>
 		</div>
 		<div class="table-responsive">
 			<table id="channel-table" class="table table-hover table-striped">
