--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -1,6 +1,6 @@
 <!-- general form elements -->
 <div class="" style="height: 100%;">
-    <div class="box-header with-border">
+    <div class="box-header with-border" style="height: 54px;">
         <h3 id="mtrCtrl_Title" class="box-title">视频控件</h3>
         <div id="widget_attribute" class="pull-right"></div>
     </div>
