--- a/resources/pages/termlog/list.html
+++ b/resources/pages/termlog/list.html
@@ -4,6 +4,7 @@
         终端日志列表
         <small>Term Log List</small>
     </h1>
+    <small class="tips" style="position: absolute; top:20px; right: 16px;"><i class="fa fa-info-circle"></i>&nbsp;终端MAC信息可以在 控制台->终端 里找到。</small>
 </section>
 
 <!-- Main content -->
@@ -16,7 +17,7 @@
                     
                     <div class="box-tools pull-right">
                         <div class="has-feedback">
-                            <input id="termlogSearch" type="text" class="form-control input-sm">
+                            <input id="termlogSearch" type="text" class="form-control input-sm" placeholder="终端mac搜索">
                             <span class="glyphicon glyphicon-search form-control-feedback"></span>
                         </div>
                     </div>                 
