--- a/resources/pages/userlog/list.html
+++ b/resources/pages/userlog/list.html
@@ -13,7 +13,12 @@
             <div class="box box-primary">
                 <div class="box-header with-border">
                     <h3 id="userlogLisTitle" class="box-title"></h3>   
-            
+                    <div class="box-tools pull-right">
+                        <div class="has-feedback">
+                            <input id="userlogSearch" type="text" class="form-control input-sm" placeholder="关键词搜索">
+                            <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                        </div>
+                    </div>  
                     <!-- /.box-tools -->
                 </div>
                 <!-- /.box-header -->
