文本保存，保存并提交，查看审核通过版本完成

--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -17,10 +17,10 @@
     <!-- /.box-body -->
     <div class="box-footer">
         <div class="pull-left">
-            <button id="Tmtr_viewlast" type="button" class="btn btn-default">查看审核通过版本的内容</button>
+            <button id="Tmtr_viewlast" type="button" class="btn btn-default">查看已通过审核的内容</button>
         </div>
         <div class="pull-right">
-            <button id="Tmtr_submit" type="submit" class="btn btn-primary"> 保存并提交</button>
+            <button id="Tmtr_submit" type="submit" class="btn btn-primary">保存并提交</button>
             <button id="Tmtr_save" type="submit" class="btn btn-primary">仅保存</button>
             <button id="Tmtr_back" type="button" class="btn btn-default">退出</button>
         </div>
