频道样式更新

--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -1,7 +1,8 @@
 <!-- general form elements -->
 <div class="" style="height: 100%;">
     <div class="box-header with-border" style="height: 54px;">
-        <i class="wiget-mark"></i><h3 id="mtrCtrl_Title" class="box-title">视频控件</h3>
+        <i class="wiget-mark" style="margin-top: 11px;"></i>
+        <label id="mtrCtrl_Title"  style="position: relative; left: 20px; top: 6px;">视频控件</label>
         <div id="widget_attribute" class="pull-right"></div>
     </div>
     <!-- /.box-header -->
@@ -191,9 +192,6 @@
                         <!-- /.info-box-content -->
                     </div>
                 </div>
-            </div>
-
-            <div class="box-footer no-padding text-center">
             </div>
 
             <!-- /.box-body -->
