--- a/resources/pages/user/user_psw.html
+++ b/resources/pages/user/user_psw.html
@@ -5,7 +5,7 @@
         </button>
         <h4 class="modal-title">
           <i class="fa fa-user-plus"></i>
-          创建用户
+          重置密码
         </h4>
     </div>
      <!-- <div class="box box-primary"> -->
@@ -18,19 +18,15 @@
               <div class="box-body">
                 <div class="form-group">
                   <label>用户名</label>
-                  <input type="text" class="form-control" id="user_name" autocomplete="off" placeholder="请输入英文用户名" onkeyup="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')" onpaste="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')">
+                  <input type="text" class="form-control" id="user_name" readonly="readonly" autocomplete="off" placeholder="请输入英文用户名" onkeyup="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')" onpaste="value=value.replace(/[^\a-\z\A-\Z0-9]/g,'')">
                 </div>
                 <div class="form-group">
-                  <label>密码</label>
+                  <label>新密码</label>
                   <input type="password" class="form-control" id="password" autocomplete="off" onfocus="this.type='password'" placeholder="请输入密码">
                 </div>
                 <div class="form-group">
                   <label>备注</label>
-                  <input type="text" class="form-control" id="description" placeholder="">
-                </div>
-                <div class="form-group">
-                  <label>邮箱</label>
-                  <input type="email" class="form-control" id="email" placeholder="请输入邮箱">
+                  <input type="text" class="form-control" id="password1" placeholder="请再次输入确认密码">
                 </div>
                <!-- <div class="form-group">
                   <label>角色</label>
@@ -49,7 +45,7 @@
               <!-- /.box-body -->
 
               <div class="box-footer" style="">
-                <button type="submit" class="btn btn-primary pull-right" id="user_create">创建用户</button>
+                <button type="submit" class="btn btn-primary pull-right" id="user_reset_psw">提交</button>
               </div>
             </form>
           <!-- </div> -->
@@ -57,7 +53,7 @@
 
 
 <script>
-    seajs.use("pages/user/user_add.js", function (user_add) {
-        user_add.init()
+    seajs.use("pages/user/user_psw.js", function (psw) {
+        psw.init()
     })
 </script>
