--- a/resources/pages/user/user_psw.html
+++ b/resources/pages/user/user_psw.html
@@ -25,7 +25,7 @@
                   <input type="password" class="form-control" id="password" autocomplete="off" onfocus="this.type='password'" placeholder="请输入密码">
                 </div>
                 <div class="form-group">
-                  <label>备注</label>
+                  <label>确认密码</label>
                   <input type="text" class="form-control" id="password1" placeholder="请再次输入确认密码">
                 </div>
                <!-- <div class="form-group">
