修复弹窗偏移问题

--- a/resources/pages/funcmodule/func_module_edit.html
+++ b/resources/pages/funcmodule/func_module_edit.html
@@ -1,4 +1,4 @@
-<div id="funcModuleAdd_box" class="modal-content" style="margin: auto; width: 600px; max-height: 560px;">
+<div id="funcModuleAdd_box" class="modal-content" style="pposition: relative; margin: auto; margin-left: -300px; width: 600px; left:50%; max-height: 560px;">
     <div class="modal-header">
         <button type="button" class="close CA_close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
