--- a/resources/pages/terminal/getMultipleTermClass.html
+++ b/resources/pages/terminal/getMultipleTermClass.html
@@ -1,4 +1,4 @@
-<div class="modal-content" style="margin: auto; width: 600px; max-height: 560px;">
+<div class="modal-content" style="pposition: relative; margin: auto; margin-left: -300px; width: 600px; left:50%; max-height: 560px;">
     <div class="modal-header">
         <button id="mul-term-class-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
