--- a/resources/pages/user/roles_edit.html
+++ b/resources/pages/user/roles_edit.html
@@ -1,4 +1,4 @@
-<div id="roleEdit_box" class="modal-content" style="margin: auto; width: 600px; max-height: 560px;">
+<div id="roleEdit_box" class="modal-content" style=" position: relative; left: 50%; margin: auto; margin-left: -300px; width: 600px;">
     <div class="modal-header">
         <button type="button" class="close CA_close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
