--- a/resources/pages/user/user_psw.html
+++ b/resources/pages/user/user_psw.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                   <label>确认密码</label>
-                  <input type="text" class="form-control" id="password1" placeholder="请再次输入确认密码">
+                  <input type="password" class="form-control" id="password1" placeholder="请再次输入确认密码">
                 </div>
                <!-- <div class="form-group">
                   <label>角色</label>
