更新时钟控件样式

--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -98,9 +98,7 @@
             	<div>
                     <input id="mtrC_dtTime" type="radio" clockType="Time" name="r3" class="flat-red rd_clock" checked>
 
-                    <div class="info-box bg-red mtrC_datetime">
-                        <span class="info-box-icon"></span>
-
+                    <div class="info-box mtrC_datetime">
                         <div class="info-box-content">
                             <span class="info-box-number">10:12:00</span>
                         </div>
@@ -108,11 +106,10 @@
                     </div>
                 </div>
                 <div>
+
                     <input id="mtrC_dtDate" type="radio" clockType="Date" name="r3" class="flat-red rd_clock">
 
-                    <div class="info-box bg-orange mtrC_datetime">
-                        <span class="info-box-icon"></span>
-
+                    <div class="info-box mtrC_datetime">
                         <div class="info-box-content">
                             <span class="info-box-number">2016-04-27</span>
                         </div>
@@ -124,9 +121,8 @@
                 <div>
                     <input id="mtrC_dtWeek" type="radio" clockType="Week" name="r3" class="flat-red rd_clock">
 
-                    <div class="info-box bg-yellow mtrC_datetime">
-                        <span class="info-box-icon"></span>
-
+                    <div class="info-box mtrC_datetime">
+                       
                         <div class="info-box-content">
                             <span class="info-box-number">星期三</span>
                         </div>
@@ -137,9 +133,7 @@
                 <div>
                     <input id="mtrC_dtDateTime" type="radio" clockType="DateTime" name="r3" class="flat-red rd_clock">
 
-                    <div class="info-box bg-green mtrC_datetime">
-                        <span class="info-box-icon"></span>
-
+                    <div class="info-box mtrC_datetime">
                         <div class="info-box-content">
                             <span class="info-box-number">2016-04-27 10:12:00</span>
                         </div>
@@ -150,8 +144,7 @@
                 <div>
                     <input id="mtrC_dtDateTimeWeekH" type="radio" clockType="DateTimeWeekH" name="r3" class="flat-red rd_clock">
 
-                    <div class="info-box bg-aqua mtrC_datetime">
-                        <span class="info-box-icon"></span>
+                    <div class="info-box mtrC_datetime">
 
                         <div class="info-box-content">
                             <span class="info-box-number">2016-04-27 10:12:00</span>
@@ -164,8 +157,7 @@
                 <div>
                     <input id="mtrC_dtDateTimeWeekV" type="radio" clockType="DateTimeWeekV" name="r3" class="flat-red rd_clock">
 
-                    <div class="info-box bg-blue mtrC_datetime">
-                        <span class="info-box-icon"></span>
+                    <div class="info-box  mtrC_datetime">
 
                         <div class="info-box-content">
                             <span class="info-box-number">2016-04-27</span>
