--- a/resources/pages/termlog/list.html
+++ b/resources/pages/termlog/list.html
@@ -4,7 +4,7 @@
         终端日志列表
         <small>Term Log List</small>
     </h1>
-    <small class="tips" style="position: absolute; top:20px; right: 16px;"><i class="fa fa-info-circle"></i>&nbsp;终端MAC信息可以在 控制台->终端 里找到。</small>
+    <small class="tips" style="position: absolute; top:22px; right: 16px; font-size: 12px;"><i class="fa fa-info-circle"></i>&nbsp;终端MAC信息可以在 控制台->终端 里找到。</small>
 </section>
 
 <!-- Main content -->
