--- a/resources/pages/userlog/list.html
+++ b/resources/pages/userlog/list.html
@@ -2,7 +2,7 @@
 <section class="content-header">
     <h1>
         用户日志列表
-        <small>User Log List</small>
+        <small></small>
     </h1>
 </section>
 
