修复截屏窗口

--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -91,7 +91,7 @@
             </div>
             <!-- /.box-tools -->
         </div>
-        <div class="mtr_choise table-responsive" style="height: calc(100% - 163px); border: 1px solid #ddd; border-radius: 3px;">
+        <div class="mtr_choise table-responsive" style=" margin-top: 10px; height: calc(100% - 150px); border: 1px solid #ddd; border-radius: 3px; width: calc(100% - 10px)">
             <!-- 资源列表 -->
             <table id="mtrCtrl_Table" class="table table-hover table-striped">
                 <thead></thead>
