定时器更新

--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -20,7 +20,7 @@
 
                
                 <div id="box_text_time" class="input-group">
-                    <span class="input-group-addon">翻页</span>
+                    <span class="input-group-addon">翻页间隔</span>
                     <input id="mtrC_pageDownPeriod" type="number" class="form-control"  placeholder="请输入翻页时间">
                     <span class="input-group-addon">秒</span>
                 </div>
