开资源添加

--- a/resources/pages/materials/materials_list.html
+++ b/resources/pages/materials/materials_list.html
@@ -55,9 +55,9 @@
                                 <span class="fa fa-caret-down"></span>
                             </button>
                             <ul id="ad-material-list" class="dropdown-menu" style="margin-top: 15px;">
-                               <!--  <li><a id="mtr_upload"><i class="fa fa-circle-o text-red"></i> 上传</a></li>
+                                <li><a id="mtr_upload"><i class="fa fa-circle-o text-red"></i> 上传</a></li>
                                 <li><a id="mtr_addText"><i class="fa fa-circle-o text-yellow"></i> 添加文本</a></li>
-                                <li><a id="mtr_addLive"><i class="fa fa-circle-o text-light-blue"></i> 添加直播</a></li> -->
+                                <li><a id="mtr_addLive"><i class="fa fa-circle-o text-light-blue"></i> 添加直播</a></li> 
                             </ul>
                         </div>
 
