审核开关关闭时 隐藏保存并提交和查看历史版本按钮

--- a/resources/pages/materials/materials_list.html
+++ b/resources/pages/materials/materials_list.html
@@ -1,7 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        资源管理
+        资源存储
     </h1>
 </section>
 
