--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -21,7 +21,7 @@
         </div>
         <div class="pull-right">
             <button id="Tmtr_submit" type="submit" class="btn btn-primary">保存并提交</button>
-            <button id="Tmtr_save" type="submit" class="btn btn-primary">仅保存</button>
+            <button id="Tmtr_save" type="submit" class="btn btn-primary">保存</button>
             <button id="Tmtr_back" type="button" class="btn btn-default">退出</button>
         </div>
     </div>
