--- a/resources/pages/userlog/list.html
+++ b/resources/pages/userlog/list.html
@@ -1,7 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        用户日志列表
+        操作日志
         <small></small>
     </h1>
 </section>
