--- a/resources/pages/user/roles_assign.html
+++ b/resources/pages/user/roles_assign.html
@@ -24,7 +24,7 @@
     </div>
     <div class="modal-footer">
         <!--<button type="button" class="btn btn-default pull-left CA_close" data-dismiss="modal">返回</button>-->
-        <button id="users_updata" type="button" class="btn btn-primary pull-left">确定</button>
+        <button id="users_updata" type="button" class="btn btn-primary pull-right">确定</button>
     </div>
 </div>
 
