--- a/resources/pages/channel/addMtr.html
+++ b/resources/pages/channel/addMtr.html
@@ -29,7 +29,7 @@
         <!-- /.box-tools -->
     </div>
     <!-- /.box-header -->
-    <div class="mtr_choise table-responsive">
+    <div class="mtr_choise table-responsive" style="overflow:auto; max-height: 430px;">
         <!-- 资源列表 -->
         <table id="mtr_choiseTable" class="table table-hover table-striped">
             <tbody>
