2016-05-05 陈晓斌 把ckeditor.js移到文本编辑页面

--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -27,6 +27,8 @@
     </div>
     <!-- /.box-footer -->
 </div>
+<!-- CK Editor -->
+<script src="resources/plugins/ckeditor/ckeditor.js"></script>
 
 <script>
     seajs.use("pages/materials/materials_addText.js", function (materials_addText) {
