角色编辑页面逻辑优化

--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -20,7 +20,7 @@
               <label class="col-sm-2 control-label">当前频道</label>
               <div class="col-sm-10">
                 <div class="checkbox">
-                    <a class="to-Channel"><label id="CO-channel" style="padding-left: 0;"></label></a>
+                    <label id="CO-channel" style="padding-left: 0;"></label>
                 </div>
               </div>
             </div>
@@ -28,7 +28,7 @@
               <label class="col-sm-2 control-label">预下发频道</label>
               <div class="col-sm-10">
                 <div class="checkbox">
-                    <a class="to-preChannel"><label id="CO-preChannel" style="padding-left: 0;"></label></a>
+                    <label id="CO-preChannel" style="padding-left: 0;"></label>
                 </div>
               </div>
             </div>
