2016-09-02 cxb 删除保存并提交

--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -20,7 +20,7 @@
             <button id="Tmtr_viewlast" type="button" class="btn btn-default">查看已通过审核的内容</button>
         </div>
         <div class="pull-right">
-            <button id="Tmtr_submit" type="submit" class="btn btn-primary">保存并提交</button>
+            <!--<button id="Tmtr_submit" type="submit" class="btn btn-primary">保存并提交</button>-->
             <button id="Tmtr_save" type="submit" class="btn btn-primary">保存</button>
             <button id="Tmtr_back" type="button" class="btn btn-default">退出</button>
         </div>
