--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
 <div class="login-box">
     <div class="login-logo">
-        <a style="cursor:default;color: white; font-size: 36px;"><b>CLEAR</b>&nbsp;信息发布系统</a>
+        <a style=""><b>CLEAR</b>&nbsp;信息发布系统</a>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
